[package]
name = "jk_bms"
version = "0.1.0"
edition = "2021"
description = "JK BMS library and CLI for MYBMM system"
license = "MIT"

[dependencies]
thiserror = "1.0"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
btleplug = { version = "0.11", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "time"], optional = true }
uuid = { version = "1", optional = true }
futures-util = { version = "0.3", optional = true }
socketcan = { version = "3.5.0", optional = true }

[features]
default = ["bluetooth"]
bluetooth = ["btleplug", "tokio", "uuid", "futures-util"]
can = ["socketcan"]

[lib]
name = "jk_bms"
path = "src/lib.rs"

[[bin]]
name = "jktool"
path = "src/bin/jktool/main.rs"
